<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />


        <LinearLayout
            android:id="@+id/resNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="20dp"
            android:padding="8dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                />

            <CheckBox
                android:id="@+id/chkBox_sort_by_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/delivery_timeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_delivery_time"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"

            />

        <CheckBox
            android:id="@+id/chkBox_sort_by_delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delivery_feeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_delivery_fee"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"

            />

        <CheckBox
            android:id="@+id/chkBox_sort_by_delivery_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/highest_ratedId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_highest_rated"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            />

        <CheckBox
            android:id="@+id/chkBox_sort_by_highest_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="#17A8EC"
        />


</LinearLayout>